Entity Framework Core integriert

--- a/TradingCsvAnalyser/appsettings.json
+++ b/TradingCsvAnalyser/appsettings.json
@@ -1,6 +1,10 @@
 ﻿{
   "Appsettings":
   {
-    "bla" : "bla"
+    "bla" : "bla",
+    "ConnectionString" : "SQLite/PriceData.db",
+    "UseEfCoreLazyLoading" : "false",
+    "UseEfCoreLogging": "false",
+    "DbType":"SqLite"
   }
 }
