--- a/TradingCsvAnalyser/TradingCsvAnalyser.csproj
+++ b/TradingCsvAnalyser/TradingCsvAnalyser.csproj
@@ -5,10 +5,12 @@
         <TargetFramework>net6.0-windows</TargetFramework>
         <Nullable>enable</Nullable>
         <UseWPF>true</UseWPF>
+        <StartupObject>TradingCsvAnalyser.App</StartupObject>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="CsvHelper" Version="27.2.1" />
+      <PackageReference Include="FluentAssertions" Version="6.2.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.1">
         <PrivateAssets>all</PrivateAssets>
@@ -22,7 +24,12 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+      <PackageReference Include="Microsoft.NETCore.App" Version="2.2.8" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.1" />
+      <PackageReference Include="NuGet.Frameworks" Version="6.0.0" />
+      <PackageReference Include="NUnit" Version="3.13.2" />
+      <PackageReference Include="NUnit3TestAdapter" Version="4.1.0" />
     </ItemGroup>
 
     <ItemGroup>
@@ -33,8 +40,8 @@
 
     <ItemGroup>
       <Folder Include="DataProviders\Repositories" />
-      <Folder Include="Managers" />
       <Folder Include="Providers" />
+      <Folder Include="Tests" />
     </ItemGroup>
 
 </Project>
