Way too big again EFCore and Migrations Work now 2 Types of Submits Smarter PriceEntry

--- a/TradingCsvAnalyser/appsettings.json
+++ b/TradingCsvAnalyser/appsettings.json
@@ -2,7 +2,7 @@
   "Appsettings":
   {
     "bla" : "bla",
-    "ConnectionString" : "SQLite/PriceData.db",
+    "ConnectionString" : "Data Source=analyser.db",
     "UseEfCoreLazyLoading" : "false",
     "UseEfCoreLogging": "false",
     "DbType":"SqLite"
