--- a/TradingCsvAnalyser/appsettings.json
+++ b/TradingCsvAnalyser/appsettings.json
@@ -2,9 +2,9 @@
   "Appsettings":
   {
     "bla" : "bla",
-    "ConnectionString" : "Data Source=analyser.db",
+    "ConnectionString" : "SERVER=localhost; DATABASE=AnalyserTest; UID=root; PASSWORD=example",
     "UseEfCoreLazyLoading" : "false",
     "UseEfCoreLogging": "false",
-    "DbType":"SqLite"
+    "DbType":"MySql"
   }
 }
