--- a/TradingCsvAnalyser/TradingCsvAnalyser.csproj
+++ b/TradingCsvAnalyser/TradingCsvAnalyser.csproj
@@ -30,6 +30,7 @@
       <PackageReference Include="NuGet.Frameworks" Version="6.0.0" />
       <PackageReference Include="NUnit" Version="3.13.2" />
       <PackageReference Include="NUnit3TestAdapter" Version="4.1.0" />
+      <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.0" />
     </ItemGroup>
 
     <ItemGroup>
