--- a/TradingCsvAnalyser/appsettings.json
+++ b/TradingCsvAnalyser/appsettings.json
@@ -5,6 +5,7 @@
     "ConnectionString" : "SERVER=localhost; DATABASE=AnalyserTest; UID=root; PASSWORD=example",
     "UseEfCoreLazyLoading" : "false",
     "UseEfCoreLogging": "false",
-    "DbType":"MySql"
+    "DbType":"MySql",
+    "CsvDirectory" : ""
   }
 }
